[tool.poetry]
name = "search-engines"
version = "1.0.7"
description = "Query and scrape search engines."
authors = ["Dan Kelleher <kelleherjdan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyppeteer = "^1.0.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
